--- a/app/src/main/res/layout/alert_box_layout.xml
+++ b/app/src/main/res/layout/alert_box_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@color/color_background"
+        android:background="@color/text_color_alertbox"
         android:text="@string/not_found"
         android:textSize="25sp"
         android:textAlignment="center"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/try_again"
-        android:background="@color/color_background"
+        android:background="@color/text_color_alertbox"
         android:textColor="@color/textBoxColor"
         android:layout_margin="50dp"
         android:buttonCornerRadius="8dp"
