--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_color_of_layout"
         android:orientation="vertical">
         <fragment
             android:layout_width="match_parent"
@@ -15,58 +16,44 @@
             android:id="@+id/maps"
             android:layout_weight="1"
             android:name="com.google.android.gms.maps.SupportMapFragment">
+
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <RelativeLayout
+                android:layout_height="wrap_content"
+                android:id="@+id/search_box_layout"
+                android:layout_marginTop="50dp"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/search_box_layout"
-                    android:layout_marginTop="30dp"
-                    android:orientation="horizontal">
-                    <EditText
-                        android:id="@+id/address"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:paddingStart="10dp"
-                        android:paddingEnd="40dp"
-                        android:layout_margin="5dp"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:fontFamily="@font/adamina"
-                        android:background="@drawable/recycler_design"
-                        android:inputType="textPersonName"/>
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:id="@+id/search_icon"
-                        android:layout_alignEnd="@id/address"
-                        android:src="@drawable/ic_search_black_24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="7dp"
-                        android:onClick="findAddress"/>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ZoomControls
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="10dp"
-                        android:id="@+id/zoom_control"/>
-                </RelativeLayout>
+                    android:ems="10"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="40dp"
+                    android:layout_margin="5dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:fontFamily="@font/adamina"
+                    android:background="@drawable/recycler_design"
+                    android:inputType="textPersonName"/>
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:id="@+id/search_icon"
+                    android:layout_alignEnd="@id/address"
+                    android:src="@drawable/ic_search_black_24dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="7dp"
+                    android:onClick="findAddress"/>
             </RelativeLayout>
         </fragment>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/looked_up_address"
             android:layout_width="match_parent"
             android:layout_weight="2"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:background="@drawable/address_box_design"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
     </LinearLayout>
 
 
