--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="3dp"
-    android:layout_marginBottom="1dp"
+    android:layout_margin="10dp"
     android:background="@drawable/recycler_design"
     android:id="@+id/parent_view">
 
@@ -11,9 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:textAlignment="center"
+        android:padding="5dp"
         android:id="@+id/address_already_looked_up"
         android:fontFamily="@font/adamina"
-        android:textColor="@color/color_background"
+        android:textColor="@color/text_color_recyclerview"
+        android:background="@color/data_adapter_background"
         android:textSize="20sp"/>
 
 </LinearLayout>
